--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -1,9 +1,10 @@
 {
   "name": "adaptivecards-visualizer",
-  "version": "1.0.1-6",
+  "version": "1.0.1-7",
   "description": "Adaptive Card Visualizer for HTML renderer",
+  "author": "AdaptiveCards",
+  "license": "MIT",
   "main": "dist/adaptivecards-visualizer.js",
-  "private": true,
   "scripts": {
     "build-all": "cd ../adaptivecards && npm run build && cd ../adaptivecards-visualizer && npm run build",
     "force-update": "npm install adaptivecards -f",
@@ -36,7 +37,5 @@
     "typescript": "^2.1.5",
     "vkbeautify": "^0.99.1",
     "webpack": "^2.3.1"
-  },
-  "author": "Microsoft",
-  "license": "MIT"
+  }
 }
