--- a/source/nodejs/adaptivecards-site/package.json
+++ b/source/nodejs/adaptivecards-site/package.json
@@ -16,6 +16,7 @@
     "glob": "^7.1.2",
     "hexo": "^3.4.1",
     "hexo-browsersync": "^0.2.0",
+    "hexo-cli": "^1.0.4",
     "hexo-fs": "^0.2.2",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
