--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -20,7 +20,7 @@
     "build": "npm run tsc && npm run build-dist && npm run dts",
     "watch": "webpack --watch",
     "dts": "dts-generator --name adaptivecards --project . --out dist/adaptivecards.d.ts",
-    "test": "jest --coverage",
+    "test": "jest --forceExit",
     "preversion": "npm test",
     "version": "npm run build"
   },
