Updates to the node projects for automated builds and publish to nightly npm repo (#969)
* working on node builds
* update package and output paths
* fix script
* remove git commands from version script
* bump versions fix dt.s types location
* update script to use local hexo-cli
* change jest script
* trying to fix jest hanging in vsts
* updated header urls

--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -1,9 +1,10 @@
 {
   "name": "adaptivecards-visualizer",
-  "version": "0.1.0",
+  "version": "1.0.1-11",
   "description": "Adaptive Card Visualizer for HTML renderer",
-  "main": "built/adaptivecards-visualizer.js",
-  "private": true,
+  "author": "AdaptiveCards",
+  "license": "MIT",
+  "main": "dist/adaptivecards-visualizer.js",
   "scripts": {
     "build-all": "cd ../adaptivecards && npm run build && cd ../adaptivecards-visualizer && npm run build",
     "force-update": "npm install adaptivecards -f",
@@ -13,20 +14,21 @@
     "build-css": "postcss ./css/*.css --use autoprefixer --replace --no-map",
     "watch": "webpack --watch",
     "start": "http-server -c-1 -o",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "npm run build"
   },
   "dependencies": {
     "@types/ace": "0.0.32",
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
+    "adaptivecards": "^1.0.1-5",
     "ajv-cli": "1.1.1",
     "autoprefixer": "^6.7.7",
     "brace": "^0.9.1",
     "http-server": "0.9.0",
     "json-loader": "0.5.4",
     "markdown-it": "^8.2.2",
-    "adaptivecards": "^1.0.0-beta.1",
     "node-sass": "^4.5.2",
     "postcss": "^5.2.16",
     "postcss-cli": "^3.1.1",
@@ -35,7 +37,5 @@
     "typescript": "^2.1.5",
     "vkbeautify": "^0.99.1",
     "webpack": "^2.3.1"
-  },
-  "author": "Microsoft",
-  "license": "MIT"
+  }
 }
