--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -1,7 +1,9 @@
 {
   "name": "adaptivecards",
-  "version": "1.0.0-beta2",
+  "version": "1.0.1-11",
   "description": "Adaptive Card TypeScript/Javascript library for HTML Clients",
+  "author": "AdaptiveCards",
+  "license": "MIT",
   "homepage": "http://adaptivecards.io",
   "keywords": [
     "adaptivecards",
@@ -17,29 +19,10 @@
     "tsc": "tsc -p .",
     "build": "npm run tsc && npm run build-dist && npm run dts",
     "watch": "webpack --watch",
-    "dts": "dts-generator --name adaptive-cards --project . --out dist/adaptivecards.d.ts",
-    "test": "jest --coverage"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json"
-    ],
-    "coverageDirectory": "coverage",
-    "coverageReporters": [
-      "text-summary",
-      "html"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.ts"
-    ]
+    "dts": "dts-generator --name adaptivecards --project . --out dist/adaptivecards.d.ts",
+    "test": "jest --forceExit --runInBand",
+    "preversion": "npm test",
+    "version": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -65,6 +48,25 @@
     "typescript": "^2.1.5",
     "webpack": "^2.2.1"
   },
-  "author": "Microsoft",
-  "license": "MIT"
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text-summary",
+      "html"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ]
+  }
 }
