--- a/source/nodejs/adaptivecards-site/package.json
+++ b/source/nodejs/adaptivecards-site/package.json
@@ -7,15 +7,18 @@
     "build-and-generate": "npm run build-all && hexo generate"
   },
   "hexo": {
-    "version": "3.3.9"
+    "version": "3.4.1"
   },
   "dependencies": {
+    "adaptivecards": "^1.0.1-4",
+    "adaptivecards-visualizer": "^1.0.1-4",
     "change-case": "^3.0.1",
     "glob": "^7.1.2",
-    "hexo": "^3.2.0",
+    "hexo": "^3.4.1",
     "hexo-browsersync": "^0.2.0",
+    "hexo-cli": "^1.0.4",
     "hexo-fs": "^0.2.2",
-    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
@@ -23,8 +26,8 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "adaptivecards": "^1.0.0-beta.1",
-    "minimist": "^1.2.0",
-    "markdown-it": "^8.2.2"
+    "markdown-it": "^8.2.2",
+    "marked-schema": "^0.1.1",
+    "minimist": "^1.2.0"
   }
 }
