--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adaptivecards",
-  "version": "1.0.1-11",
+  "version": "1.0.0",
   "description": "Adaptive Card TypeScript/Javascript library for HTML Clients",
   "author": "AdaptiveCards",
   "license": "MIT",
