--- a/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.nuspec
+++ b/source/uwp/NuGet/AdaptiveCards.Rendering.Uwp.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>AdaptiveCards.Rendering.Uwp</id>
-        <version>1.0.0-beta2</version>
+        <version>1.0.0</version>
         <authors>AdaptiveCards</authors>
         <summary>Adaptive Cards library for UWP</summary>
         <description>Used to render Adaptive Cards into UWP XAML or to work with the object model for C++ projects</description>
