--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adaptivecards-visualizer",
-  "version": "1.0.1-11",
+  "version": "1.0.0",
   "description": "Adaptive Card Visualizer for HTML renderer",
   "author": "AdaptiveCards",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
-    "adaptivecards": "^1.0.1-5",
+    "adaptivecards": "^1.0.0-0",
     "ajv-cli": "1.1.1",
     "autoprefixer": "^6.7.7",
     "brace": "^0.9.1",
