--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,4 @@ source/nodejs/adaptivecards-visualizer/built/visualizer-with-renderer.js
 source/nodejs/adaptivecards-visualizer/built/visualizer-with-renderer.js
 source/nodejs/adaptivecards/built/card-elements.js
 source/nodejs/adaptivecards/built/card-elements.js.map
+*.tgz
