--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -1,8 +1,8 @@
 {
   "name": "adaptivecards",
-  "version": "1.0.0-beta3",
+  "version": "1.0.0-beta4",
   "description": "Adaptive Card TypeScript/Javascript library for HTML Clients",
-  "author": "AdaptiveCards",
+  "author": "adaptivecards",
   "license": "MIT",
   "homepage": "http://adaptivecards.io",
   "keywords": [
@@ -15,9 +15,8 @@
   "main": "built/adaptivecards.js",
   "types": "built/adaptivecards.d.ts",
   "scripts": {
-    "build-dist": "webpack",
     "tsc": "tsc -p .",
-    "build": "npm run tsc && npm run build-dist && npm run dts",
+    "build": "tsc && webpack && npm run dts",
     "watch": "webpack --watch",
     "dts": "dts-generator --name adaptivecards --project . --out dist/adaptivecards.d.ts",
     "test": "jest --forceExit --runInBand",
@@ -29,24 +28,24 @@
     "url": "git://git@github.com/microsoft/AdaptiveCards.git"
   },
   "dependencies": {
-    "markdown-it": "^8.2.2"
+    "markdown-it": "^8.4.0"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.5",
+    "@types/jest": "^21.1.7",
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
-    "@types/vkbeautify": "^0.99.0",
+    "@types/vkbeautify": "^0.99.2",
     "ajv-cli": "1.1.1",
     "babel-jest": "^21.2.0",
     "dts-generator": "^2.1.0",
     "jest": "^21.2.1",
     "json-loader": "0.5.4",
     "regenerator-runtime": "^0.11.0",
-    "ts-jest": "^21.1.4",
-    "ts-loader": "^2.0.0",
+    "ts-jest": "^21.2.3",
+    "ts-loader": "^3.1.1",
     "tslint": "^4.4.2",
-    "typescript": "^2.1.5",
-    "webpack": "^2.2.1"
+    "typescript": "^2.6.1",
+    "webpack": "^3.8.1"
   },
   "jest": {
     "transform": {
