--- a/source/nodejs/.vscode/launch.json
+++ b/source/nodejs/.vscode/launch.json
@@ -2,11 +2,20 @@
     "version": "0.1.0",
     "configurations": [
         {
-            "name": "Launch Visualizer",
-            "type": "chrome",
+            "type": "node",
             "request": "launch",
-            "file": "${workspaceRoot}/visualizer/dev.html",
-            "sourceMaps": true
+            "name": "Debug Tests",
+            "cwd": "${workspaceFolder}\\adaptivecards",
+            "program": "${workspaceFolder}\\adaptivecards\\node_modules\\jest\\bin\\jest.js",
+            "args": [
+                "--runInBand",
+                "--config",
+                "${workspaceRoot}\\adaptivecards\\config\\jest.debug.json"
+            ],
+            "sourceMaps": true,
+            "outFiles": [
+                "${workspaceRoot}/adaptivecards/output/debug/**/*"
+            ]
         }
     ]
 }
