--- a/source/nodejs/.vscode/tasks.json
+++ b/source/nodejs/.vscode/tasks.json
@@ -1,15 +1,16 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
+    "version": "2.0.0",
     "command": "npm",
-    "isShellCommand": true,
-    "args": ["run"],
+    "args": ["run"],    
     "tasks": [
         {
-            "showOutput": "always",
-            "taskName": "build-all",
-            "isBuildCommand": true,
+            "label": "Build",
+            "group": "build",
+            "options": {
+                "cwd": "./adaptivecards"
+            },
             "isBackground": true,
             "problemMatcher": "$tsc-watch"
         }
