--- a/source/nodejs/adaptivecards/tsconfig.json
+++ b/source/nodejs/adaptivecards/tsconfig.json
@@ -1,18 +1,16 @@
 {
     "compilerOptions": {
+        "module": "commonjs",
+        "target": "es5",
         "lib": [
             "dom",
             "es2015"
         ],
-        "outDir": "./module",
-        "module": "commonjs",
+        "outDir": "lib",
         "moduleResolution": "node",
-        "noImplicitAny": false,
-        "sourceMap": true,
-        "target": "es5",
+        "noImplicitAny": false,        
+        "sourceMap": true, 
         "declaration": true
     },
-    "include": [
-        "./src/**/*"
-    ]
+    "files": ["./src/adaptivecards.ts"]
 }
