--- a/source/nodejs/.vscode/tasks.json
+++ b/source/nodejs/.vscode/tasks.json
@@ -2,14 +2,17 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
-    "command": "npm",
-    "args": ["run"],    
+    "options": {
+        "cwd": "./adaptivecards"
+    },
     "tasks": [
         {
-            "label": "Build",
-            "group": "build",
-            "options": {
-                "cwd": "./adaptivecards"
+            "type": "npm",
+            "script": "build:debug",
+            "label": "Build Debug",
+            "group": {
+                "kind": "build",
+                "isDefault": true
             },
             "isBackground": true,
             "problemMatcher": "$tsc-watch"
