--- a/source/nodejs/adaptivecards/tsconfig.debug.json
+++ b/source/nodejs/adaptivecards/tsconfig.debug.json
@@ -1,9 +1,9 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "./lib"
+        "outDir": "./build"
     },
     "include": [
-        "./src/__tests__/**/*.ts"
+        "./src/**/*.ts"
     ]
 }
