change to ts-loader

--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -21,12 +21,12 @@
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.2",
     "autoprefixer": "^6.7.7",
-    "awesome-typescript-loader": "^3.4.0",
     "http-server": "0.9.0",
     "json-loader": "0.5.4",
     "node-sass": "^4.7.2",
     "postcss": "^5.2.18",
     "postcss-cli": "^3.1.1",
+    "ts-loader": "^3.1.1",
     "tslint": "^4.4.2",
     "typescript": "^2.6.2",
     "vkbeautify": "^0.99.3",
