--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -1,8 +1,8 @@
 {
   "name": "adaptivecards",
-  "version": "1.0.0-beta5",
+  "version": "1.0.0-beta6",
   "description": "Adaptive Card TypeScript/Javascript library for HTML Clients",
-  "author": "adaptivecards",
+  "author": "AdaptiveCards <adaptivecardspkg@microsoft.com>",
   "license": "MIT",
   "homepage": "http://adaptivecards.io",
   "keywords": [
@@ -12,44 +12,48 @@
     "microsoft",
     "bot"
   ],
-  "main": "built/adaptivecards.js",
-  "types": "built/adaptivecards.d.ts",
+  "main": "lib/adaptivecards.js",
+  "types": "lib/adaptivecards.d.ts",
+  "files": [
+    "lib",
+    "dist"
+  ],
   "scripts": {
-    "tsc": "tsc -p .",
-    "build": "tsc && webpack && npm run dts",
+    "test": "jest --forceExit --runInBand",
+    "clean": "rimraf build lib dist",
+    "compile": "npm run clean && tsc",
+    "bundle": "cross-env NODE_ENV=production webpack",
+    "build": "npm run compile && npm run bundle",
+    "build:debug": "npm run clena && tsc -p ./tsconfig.debug.json && webpack",
     "watch": "webpack --watch",
     "dts": "dts-generator --name adaptivecards --project . --out dist/adaptivecards.d.ts",
-    "test": "jest --forceExit --runInBand",
-    "preversion": "npm test",
-    "version": "npm run build"
+    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+    "prepare": "npm run build && npm test && npm run dts"
   },
   "repository": {
     "type": "git",
     "url": "git://git@github.com/microsoft/AdaptiveCards.git"
   },
-  "dependencies": {
-    "markdown-it": "^8.4.0"
-  },
   "devDependencies": {
-    "@types/jest": "^21.1.7",
-    "@types/markdown-it": "0.0.1",
+    "@types/jest": "^21.1.8",
     "@types/node": "0.0.2",
-    "@types/vkbeautify": "^0.99.2",
     "ajv-cli": "1.1.1",
+    "awesome-typescript-loader": "^3.4.0",
     "babel-jest": "^21.2.0",
+    "cross-env": "^5.1.1",
     "dts-generator": "^2.1.0",
     "jest": "^21.2.1",
     "json-loader": "0.5.4",
     "regenerator-runtime": "^0.11.0",
     "ts-jest": "^21.2.3",
-    "ts-loader": "^3.1.1",
     "tslint": "^4.4.2",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1"
   },
   "jest": {
+    "rootDir": "src",
     "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
@@ -58,14 +62,6 @@
       "js",
       "jsx",
       "json"
-    ],
-    "coverageDirectory": "coverage",
-    "coverageReporters": [
-      "text-summary",
-      "html"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.ts"
     ]
   }
 }
