--- a/source/shared/cpp/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel.vcxproj
+++ b/source/shared/cpp/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel.vcxproj
@@ -130,8 +130,9 @@
     <ClCompile Include="..\..\ObjectModel\Image.cpp" />
     <ClCompile Include="..\..\ObjectModel\ImageSet.cpp" />
     <ClCompile Include="..\..\ObjectModel\jsoncpp.cpp" />
-    <ClCompile Include="..\..\ObjectModel\MarkDownTokenizer.cpp" />
+    <ClCompile Include="..\..\ObjectModel\MarkDownBlockParser.cpp" />
     <ClCompile Include="..\..\ObjectModel\MarkDownHtmlGenerator.cpp" />
+    <ClCompile Include="..\..\ObjectModel\MarkDownParsedResult.cpp" />
     <ClCompile Include="..\..\ObjectModel\MarkDownParser.cpp" />
     <ClCompile Include="..\..\ObjectModel\NumberInput.cpp" />
     <ClCompile Include="..\..\ObjectModel\OpenUrlAction.cpp" />
@@ -165,7 +166,9 @@
     <ClInclude Include="..\..\ObjectModel\Image.h" />
     <ClInclude Include="..\..\ObjectModel\ImageSet.h" />
     <ClInclude Include="..\..\ObjectModel\LinkState.h" />
+    <ClInclude Include="..\..\ObjectModel\MarkDownBlockParser.h" />
     <ClInclude Include="..\..\ObjectModel\MarkDownHtmlGenerator.h" />
+    <ClInclude Include="..\..\ObjectModel\MarkDownParsedResult.h" />
     <ClInclude Include="..\..\ObjectModel\MarkDownParser.h" />
     <ClInclude Include="..\..\ObjectModel\NumberInput.h" />
     <ClInclude Include="..\..\ObjectModel\OpenUrlAction.h" />
